packages/taurus/taurus-2.1.1.tar.gz/taurus-2.1.1/lib/taurus/qt/qtgui/taurusgui/parser.out
Created by PLY version 3.3 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> jdfile
Rule 1     jdfile -> JDFILE SYMBOL LBRACKET global element_list RBRACKET
Rule 2     jdfile -> JDFILE LBRACKET global RBRACKET
Rule 3     global -> GLOBAL LBRACKET RBRACKET
Rule 4     global -> GLOBAL LBRACKET parameter_list RBRACKET
Rule 5     element_list -> element_list element
Rule 6     element_list -> element
Rule 7     element -> obj LBRACKET RBRACKET
Rule 8     element -> obj LBRACKET parameter_list RBRACKET
Rule 9     obj -> JDLINE
Rule 10    obj -> JDRECTANGLE
Rule 11    obj -> JDROUNDRECTANGLE
Rule 12    obj -> JDGROUP
Rule 13    obj -> JDELLIPSE
Rule 14    obj -> JDBAR
Rule 15    obj -> JDSWINGOBJECT
Rule 16    obj -> JDLABEL
Rule 17    obj -> JDPOLYLINE
Rule 18    obj -> JDIMAGE
Rule 19    obj -> JDAXIS
Rule 20    obj -> JDSLIDER
Rule 21    parameter_list -> parameter_list parameter
Rule 22    parameter_list -> parameter
Rule 23    parameter -> SYMBOL TWOP param_value
Rule 24    parameter -> SYMBOL TWOP LBRACKET RBRACKET
Rule 25    parameter -> SYMBOL TWOP LBRACKET parameter_list RBRACKET
Rule 26    parameter -> SYMBOL TWOP LBRACKET element_list RBRACKET
Rule 27    param_value -> value_list
Rule 28    value_list -> value_list COMMA value
Rule 29    value_list -> value
Rule 30    value -> NUMBER
Rule 31    value -> TEXT
Rule 32    value -> true
Rule 33    value -> false

Terminals, with rules where they appear

COMMA                : 28
GLOBAL               : 3 4
JDAXIS               : 19
JDBAR                : 14
JDELLIPSE            : 13
JDFILE               : 1 2
JDGROUP              : 12
JDIMAGE              : 18
JDLABEL              : 16
JDLINE               : 9
JDPOLYLINE           : 17
JDRECTANGLE          : 10
JDROUNDRECTANGLE     : 11
JDSLIDER             : 20
JDSWINGOBJECT        : 15
LBRACKET             : 1 2 3 4 7 8 24 25 26
NUMBER               : 30
RBRACKET             : 1 2 3 4 7 8 24 25 26
SYMBOL               : 1 23 24 25 26
TEXT                 : 31
TWOP                 : 23 24 25 26
error                : 
false                : 33
true                 : 32

Nonterminals, with rules where they appear

element              : 5 6
element_list         : 1 5 26
global               : 1 2
jdfile               : 0
obj                  : 7 8
param_value          : 23
parameter            : 21 22
parameter_list       : 4 8 21 25
value                : 28 29
value_list           : 27 28

Parsing method: LALR

state 0

    (0) S' -> . jdfile
    (1) jdfile -> . JDFILE SYMBOL LBRACKET global element_list RBRACKET
    (2) jdfile -> . JDFILE LBRACKET global RBRACKET

    JDFILE          shift and go to state 2

    jdfile                         shift and go to state 1

state 1

    (0) S' -> jdfile .



state 2

    (1) jdfile -> JDFILE . SYMBOL LBRACKET global element_list RBRACKET
    (2) jdfile -> JDFILE . LBRACKET global RBRACKET

    SYMBOL          shift and go to state 3
    LBRACKET        shift and go to state 4


state 3

    (1) jdfile -> JDFILE SYMBOL . LBRACKET global element_list RBRACKET

    LBRACKET        shift and go to state 5


state 4

    (2) jdfile -> JDFILE LBRACKET . global RBRACKET
    (3) global -> . GLOBAL LBRACKET RBRACKET
    (4) global -> . GLOBAL LBRACKET parameter_list RBRACKET

    GLOBAL          shift and go to state 7

    global                         shift and go to state 6

state 5

    (1) jdfile -> JDFILE SYMBOL LBRACKET . global element_list RBRACKET
    (3) global -> . GLOBAL LBRACKET RBRACKET
    (4) global -> . GLOBAL LBRACKET parameter_list RBRACKET

    GLOBAL          shift and go to state 7

    global                         shift and go to state 8

state 6

    (2) jdfile -> JDFILE LBRACKET global . RBRACKET

    RBRACKET        shift and go to state 9


state 7

    (3) global -> GLOBAL . LBRACKET RBRACKET
    (4) global -> GLOBAL . LBRACKET parameter_list RBRACKET

    LBRACKET        shift and go to state 10


state 8

    (1) jdfile -> JDFILE SYMBOL LBRACKET global . element_list RBRACKET
    (5) element_list -> . element_list element
    (6) element_list -> . element
    (7) element -> . obj LBRACKET RBRACKET
    (8) element -> . obj LBRACKET parameter_list RBRACKET
    (9) obj -> . JDLINE
    (10) obj -> . JDRECTANGLE
    (11) obj -> . JDROUNDRECTANGLE
    (12) obj -> . JDGROUP
    (13) obj -> . JDELLIPSE
    (14) obj -> . JDBAR
    (15) obj -> . JDSWINGOBJECT
    (16) obj -> . JDLABEL
    (17) obj -> . JDPOLYLINE
    (18) obj -> . JDIMAGE
    (19) obj -> . JDAXIS
    (20) obj -> . JDSLIDER

    JDLINE          shift and go to state 25
    JDRECTANGLE     shift and go to state 13
    JDROUNDRECTANGLE shift and go to state 20
    JDGROUP         shift and go to state 16
    JDELLIPSE       shift and go to state 17
    JDBAR           shift and go to state 23
    JDSWINGOBJECT   shift and go to state 15
    JDLABEL         shift and go to state 11
    JDPOLYLINE      shift and go to state 19
    JDIMAGE         shift and go to state 21
    JDAXIS          shift and go to state 22
    JDSLIDER        shift and go to state 24

    element                        shift and go to state 18
    obj                            shift and go to state 12
    element_list                   shift and go to state 14

state 9

    (2) jdfile -> JDFILE LBRACKET global RBRACKET .

    $end            reduce using rule 2 (jdfile -> JDFILE LBRACKET global RBRACKET .)


state 10

    (3) global -> GLOBAL LBRACKET . RBRACKET
    (4) global -> GLOBAL LBRACKET . parameter_list RBRACKET
    (21) parameter_list -> . parameter_list parameter
    (22) parameter_list -> . parameter
    (23) parameter -> . SYMBOL TWOP param_value
    (24) parameter -> . SYMBOL TWOP LBRACKET RBRACKET
    (25) parameter -> . SYMBOL TWOP LBRACKET parameter_list RBRACKET
    (26) parameter -> . SYMBOL TWOP LBRACKET element_list RBRACKET

    RBRACKET        shift and go to state 28
    SYMBOL          shift and go to state 27

    parameter                      shift and go to state 29
    parameter_list                 shift and go to state 26

state 11

    (16) obj -> JDLABEL .

    LBRACKET        reduce using rule 16 (obj -> JDLABEL .)


state 12

    (7) element -> obj . LBRACKET RBRACKET
    (8) element -> obj . LBRACKET parameter_list RBRACKET

    LBRACKET        shift and go to state 30


state 13

    (10) obj -> JDRECTANGLE .

    LBRACKET        reduce using rule 10 (obj -> JDRECTANGLE .)


state 14

    (1) jdfile -> JDFILE SYMBOL LBRACKET global element_list . RBRACKET
    (5) element_list -> element_list . element
    (7) element -> . obj LBRACKET RBRACKET
    (8) element -> . obj LBRACKET parameter_list RBRACKET
    (9) obj -> . JDLINE
    (10) obj -> . JDRECTANGLE
    (11) obj -> . JDROUNDRECTANGLE
    (12) obj -> . JDGROUP
    (13) obj -> . JDELLIPSE
    (14) obj -> . JDBAR
    (15) obj -> . JDSWINGOBJECT
    (16) obj -> . JDLABEL
    (17) obj -> . JDPOLYLINE
    (18) obj -> . JDIMAGE
    (19) obj -> . JDAXIS
    (20) obj -> . JDSLIDER

    RBRACKET        shift and go to state 32
    JDLINE          shift and go to state 25
    JDRECTANGLE     shift and go to state 13
    JDROUNDRECTANGLE shift and go to state 20
    JDGROUP         shift and go to state 16
    JDELLIPSE       shift and go to state 17
    JDBAR           shift and go to state 23
    JDSWINGOBJECT   shift and go to state 15
    JDLABEL         shift and go to state 11
    JDPOLYLINE      shift and go to state 19
    JDIMAGE         shift and go to state 21
    JDAXIS          shift and go to state 22
    JDSLIDER        shift and go to state 24

    element                        shift and go to state 31
    obj                            shift and go to state 12

state 15

    (15) obj -> JDSWINGOBJECT .

    LBRACKET        reduce using rule 15 (obj -> JDSWINGOBJECT .)


state 16

    (12) obj -> JDGROUP .

    LBRACKET        reduce using rule 12 (obj -> JDGROUP .)


state 17

    (13) obj -> JDELLIPSE .

    LBRACKET        reduce using rule 13 (obj -> JDELLIPSE .)


state 18

    (6) element_list -> element .

    RBRACKET        reduce using rule 6 (element_list -> element .)
    JDLINE          reduce using rule 6 (element_list -> element .)
    JDRECTANGLE     reduce using rule 6 (element_list -> element .)
    JDROUNDRECTANGLE reduce using rule 6 (element_list -> element .)
    JDGROUP         reduce using rule 6 (element_list -> element .)
    JDELLIPSE       reduce using rule 6 (element_list -> element .)
    JDBAR           reduce using rule 6 (element_list -> element .)
    JDSWINGOBJECT   reduce using rule 6 (element_list -> element .)
    JDLABEL         reduce using rule 6 (element_list -> element .)
    JDPOLYLINE      reduce using rule 6 (element_list -> element .)
    JDIMAGE         reduce using rule 6 (element_list -> element .)
    JDAXIS          reduce using rule 6 (element_list -> element .)
    JDSLIDER        reduce using rule 6 (element_list -> element .)


state 19

    (17) obj -> JDPOLYLINE .

    LBRACKET        reduce using rule 17 (obj -> JDPOLYLINE .)


state 20

    (11) obj -> JDROUNDRECTANGLE .

    LBRACKET        reduce using rule 11 (obj -> JDROUNDRECTANGLE .)


state 21

    (18) obj -> JDIMAGE .

    LBRACKET        reduce using rule 18 (obj -> JDIMAGE .)


state 22

    (19) obj -> JDAXIS .

    LBRACKET        reduce using rule 19 (obj -> JDAXIS .)


state 23

    (14) obj -> JDBAR .

    LBRACKET        reduce using rule 14 (obj -> JDBAR .)


state 24

    (20) obj -> JDSLIDER .

    LBRACKET        reduce using rule 20 (obj -> JDSLIDER .)


state 25

    (9) obj -> JDLINE .

    LBRACKET        reduce using rule 9 (obj -> JDLINE .)


state 26

    (4) global -> GLOBAL LBRACKET parameter_list . RBRACKET
    (21) parameter_list -> parameter_list . parameter
    (23) parameter -> . SYMBOL TWOP param_value
    (24) parameter -> . SYMBOL TWOP LBRACKET RBRACKET
    (25) parameter -> . SYMBOL TWOP LBRACKET parameter_list RBRACKET
    (26) parameter -> . SYMBOL TWOP LBRACKET element_list RBRACKET

    RBRACKET        shift and go to state 33
    SYMBOL          shift and go to state 27

    parameter                      shift and go to state 34

state 27

    (23) parameter -> SYMBOL . TWOP param_value
    (24) parameter -> SYMBOL . TWOP LBRACKET RBRACKET
    (25) parameter -> SYMBOL . TWOP LBRACKET parameter_list RBRACKET
    (26) parameter -> SYMBOL . TWOP LBRACKET element_list RBRACKET

    TWOP            shift and go to state 35


state 28

    (3) global -> GLOBAL LBRACKET RBRACKET .

    JDLINE          reduce using rule 3 (global -> GLOBAL LBRACKET RBRACKET .)
    JDRECTANGLE     reduce using rule 3 (global -> GLOBAL LBRACKET RBRACKET .)
    JDROUNDRECTANGLE reduce using rule 3 (global -> GLOBAL LBRACKET RBRACKET .)
    JDGROUP         reduce using rule 3 (global -> GLOBAL LBRACKET RBRACKET .)
    JDELLIPSE       reduce using rule 3 (global -> GLOBAL LBRACKET RBRACKET .)
    JDBAR           reduce using rule 3 (global -> GLOBAL LBRACKET RBRACKET .)
    JDSWINGOBJECT   reduce using rule 3 (global -> GLOBAL LBRACKET RBRACKET .)
    JDLABEL         reduce using rule 3 (global -> GLOBAL LBRACKET RBRACKET .)
    JDPOLYLINE      reduce using rule 3 (global -> GLOBAL LBRACKET RBRACKET .)
    JDIMAGE         reduce using rule 3 (global -> GLOBAL LBRACKET RBRACKET .)
    JDAXIS          reduce using rule 3 (global -> GLOBAL LBRACKET RBRACKET .)
    JDSLIDER        reduce using rule 3 (global -> GLOBAL LBRACKET RBRACKET .)
    RBRACKET        reduce using rule 3 (global -> GLOBAL LBRACKET RBRACKET .)


state 29

    (22) parameter_list -> parameter .

    RBRACKET        reduce using rule 22 (parameter_list -> parameter .)
    SYMBOL          reduce using rule 22 (parameter_list -> parameter .)


state 30

    (7) element -> obj LBRACKET . RBRACKET
    (8) element -> obj LBRACKET . parameter_list RBRACKET
    (21) parameter_list -> . parameter_list parameter
    (22) parameter_list -> . parameter
    (23) parameter -> . SYMBOL TWOP param_value
    (24) parameter -> . SYMBOL TWOP LBRACKET RBRACKET
    (25) parameter -> . SYMBOL TWOP LBRACKET parameter_list RBRACKET
    (26) parameter -> . SYMBOL TWOP LBRACKET element_list RBRACKET

    RBRACKET        shift and go to state 37
    SYMBOL          shift and go to state 27

    parameter                      shift and go to state 29
    parameter_list                 shift and go to state 36

state 31

    (5) element_list -> element_list element .

    RBRACKET        reduce using rule 5 (element_list -> element_list element .)
    JDLINE          reduce using rule 5 (element_list -> element_list element .)
    JDRECTANGLE     reduce using rule 5 (element_list -> element_list element .)
    JDROUNDRECTANGLE reduce using rule 5 (element_list -> element_list element .)
    JDGROUP         reduce using rule 5 (element_list -> element_list element .)
    JDELLIPSE       reduce using rule 5 (element_list -> element_list element .)
    JDBAR           reduce using rule 5 (element_list -> element_list element .)
    JDSWINGOBJECT   reduce using rule 5 (element_list -> element_list element .)
    JDLABEL         reduce using rule 5 (element_list -> element_list element .)
    JDPOLYLINE      reduce using rule 5 (element_list -> element_list element .)
    JDIMAGE         reduce using rule 5 (element_list -> element_list element .)
    JDAXIS          reduce using rule 5 (element_list -> element_list element .)
    JDSLIDER        reduce using rule 5 (element_list -> element_list element .)


state 32

    (1) jdfile -> JDFILE SYMBOL LBRACKET global element_list RBRACKET .

    $end            reduce using rule 1 (jdfile -> JDFILE SYMBOL LBRACKET global element_list RBRACKET .)


state 33

    (4) global -> GLOBAL LBRACKET parameter_list RBRACKET .

    JDLINE          reduce using rule 4 (global -> GLOBAL LBRACKET parameter_list RBRACKET .)
    JDRECTANGLE     reduce using rule 4 (global -> GLOBAL LBRACKET parameter_list RBRACKET .)
    JDROUNDRECTANGLE reduce using rule 4 (global -> GLOBAL LBRACKET parameter_list RBRACKET .)
    JDGROUP         reduce using rule 4 (global -> GLOBAL LBRACKET parameter_list RBRACKET .)
    JDELLIPSE       reduce using rule 4 (global -> GLOBAL LBRACKET parameter_list RBRACKET .)
    JDBAR           reduce using rule 4 (global -> GLOBAL LBRACKET parameter_list RBRACKET .)
    JDSWINGOBJECT   reduce using rule 4 (global -> GLOBAL LBRACKET parameter_list RBRACKET .)
    JDLABEL         reduce using rule 4 (global -> GLOBAL LBRACKET parameter_list RBRACKET .)
    JDPOLYLINE      reduce using rule 4 (global -> GLOBAL LBRACKET parameter_list RBRACKET .)
    JDIMAGE         reduce using rule 4 (global -> GLOBAL LBRACKET parameter_list RBRACKET .)
    JDAXIS          reduce using rule 4 (global -> GLOBAL LBRACKET parameter_list RBRACKET .)
    JDSLIDER        reduce using rule 4 (global -> GLOBAL LBRACKET parameter_list RBRACKET .)
    RBRACKET        reduce using rule 4 (global -> GLOBAL LBRACKET parameter_list RBRACKET .)


state 34

    (21) parameter_list -> parameter_list parameter .

    RBRACKET        reduce using rule 21 (parameter_list -> parameter_list parameter .)
    SYMBOL          reduce using rule 21 (parameter_list -> parameter_list parameter .)


state 35

    (23) parameter -> SYMBOL TWOP . param_value
    (24) parameter -> SYMBOL TWOP . LBRACKET RBRACKET
    (25) parameter -> SYMBOL TWOP . LBRACKET parameter_list RBRACKET
    (26) parameter -> SYMBOL TWOP . LBRACKET element_list RBRACKET
    (27) param_value -> . value_list
    (28) value_list -> . value_list COMMA value
    (29) value_list -> . value
    (30) value -> . NUMBER
    (31) value -> . TEXT
    (32) value -> . true
    (33) value -> . false

    LBRACKET        shift and go to state 43
    NUMBER          shift and go to state 41
    TEXT            shift and go to state 40
    true            shift and go to state 44
    false           shift and go to state 38

    value_list                     shift and go to state 39
    param_value                    shift and go to state 45
    value                          shift and go to state 42

state 36

    (8) element -> obj LBRACKET parameter_list . RBRACKET
    (21) parameter_list -> parameter_list . parameter
    (23) parameter -> . SYMBOL TWOP param_value
    (24) parameter -> . SYMBOL TWOP LBRACKET RBRACKET
    (25) parameter -> . SYMBOL TWOP LBRACKET parameter_list RBRACKET
    (26) parameter -> . SYMBOL TWOP LBRACKET element_list RBRACKET

    RBRACKET        shift and go to state 46
    SYMBOL          shift and go to state 27

    parameter                      shift and go to state 34

state 37

    (7) element -> obj LBRACKET RBRACKET .

    RBRACKET        reduce using rule 7 (element -> obj LBRACKET RBRACKET .)
    JDLINE          reduce using rule 7 (element -> obj LBRACKET RBRACKET .)
    JDRECTANGLE     reduce using rule 7 (element -> obj LBRACKET RBRACKET .)
    JDROUNDRECTANGLE reduce using rule 7 (element -> obj LBRACKET RBRACKET .)
    JDGROUP         reduce using rule 7 (element -> obj LBRACKET RBRACKET .)
    JDELLIPSE       reduce using rule 7 (element -> obj LBRACKET RBRACKET .)
    JDBAR           reduce using rule 7 (element -> obj LBRACKET RBRACKET .)
    JDSWINGOBJECT   reduce using rule 7 (element -> obj LBRACKET RBRACKET .)
    JDLABEL         reduce using rule 7 (element -> obj LBRACKET RBRACKET .)
    JDPOLYLINE      reduce using rule 7 (element -> obj LBRACKET RBRACKET .)
    JDIMAGE         reduce using rule 7 (element -> obj LBRACKET RBRACKET .)
    JDAXIS          reduce using rule 7 (element -> obj LBRACKET RBRACKET .)
    JDSLIDER        reduce using rule 7 (element -> obj LBRACKET RBRACKET .)


state 38

    (33) value -> false .

    COMMA           reduce using rule 33 (value -> false .)
    RBRACKET        reduce using rule 33 (value -> false .)
    SYMBOL          reduce using rule 33 (value -> false .)


state 39

    (27) param_value -> value_list .
    (28) value_list -> value_list . COMMA value

    RBRACKET        reduce using rule 27 (param_value -> value_list .)
    SYMBOL          reduce using rule 27 (param_value -> value_list .)
    COMMA           shift and go to state 47


state 40

    (31) value -> TEXT .

    COMMA           reduce using rule 31 (value -> TEXT .)
    RBRACKET        reduce using rule 31 (value -> TEXT .)
    SYMBOL          reduce using rule 31 (value -> TEXT .)


state 41

    (30) value -> NUMBER .

    COMMA           reduce using rule 30 (value -> NUMBER .)
    RBRACKET        reduce using rule 30 (value -> NUMBER .)
    SYMBOL          reduce using rule 30 (value -> NUMBER .)


state 42

    (29) value_list -> value .

    COMMA           reduce using rule 29 (value_list -> value .)
    RBRACKET        reduce using rule 29 (value_list -> value .)
    SYMBOL          reduce using rule 29 (value_list -> value .)


state 43

    (24) parameter -> SYMBOL TWOP LBRACKET . RBRACKET
    (25) parameter -> SYMBOL TWOP LBRACKET . parameter_list RBRACKET
    (26) parameter -> SYMBOL TWOP LBRACKET . element_list RBRACKET
    (21) parameter_list -> . parameter_list parameter
    (22) parameter_list -> . parameter
    (5) element_list -> . element_list element
    (6) element_list -> . element
    (23) parameter -> . SYMBOL TWOP param_value
    (24) parameter -> . SYMBOL TWOP LBRACKET RBRACKET
    (25) parameter -> . SYMBOL TWOP LBRACKET parameter_list RBRACKET
    (26) parameter -> . SYMBOL TWOP LBRACKET element_list RBRACKET
    (7) element -> . obj LBRACKET RBRACKET
    (8) element -> . obj LBRACKET parameter_list RBRACKET
    (9) obj -> . JDLINE
    (10) obj -> . JDRECTANGLE
    (11) obj -> . JDROUNDRECTANGLE
    (12) obj -> . JDGROUP
    (13) obj -> . JDELLIPSE
    (14) obj -> . JDBAR
    (15) obj -> . JDSWINGOBJECT
    (16) obj -> . JDLABEL
    (17) obj -> . JDPOLYLINE
    (18) obj -> . JDIMAGE
    (19) obj -> . JDAXIS
    (20) obj -> . JDSLIDER

    RBRACKET        shift and go to state 50
    SYMBOL          shift and go to state 27
    JDLINE          shift and go to state 25
    JDRECTANGLE     shift and go to state 13
    JDROUNDRECTANGLE shift and go to state 20
    JDGROUP         shift and go to state 16
    JDELLIPSE       shift and go to state 17
    JDBAR           shift and go to state 23
    JDSWINGOBJECT   shift and go to state 15
    JDLABEL         shift and go to state 11
    JDPOLYLINE      shift and go to state 19
    JDIMAGE         shift and go to state 21
    JDAXIS          shift and go to state 22
    JDSLIDER        shift and go to state 24

    obj                            shift and go to state 12
    parameter_list                 shift and go to state 49
    element_list                   shift and go to state 48
    element                        shift and go to state 18
    parameter                      shift and go to state 29

state 44

    (32) value -> true .

    COMMA           reduce using rule 32 (value -> true .)
    RBRACKET        reduce using rule 32 (value -> true .)
    SYMBOL          reduce using rule 32 (value -> true .)


state 45

    (23) parameter -> SYMBOL TWOP param_value .

    RBRACKET        reduce using rule 23 (parameter -> SYMBOL TWOP param_value .)
    SYMBOL          reduce using rule 23 (parameter -> SYMBOL TWOP param_value .)


state 46

    (8) element -> obj LBRACKET parameter_list RBRACKET .

    RBRACKET        reduce using rule 8 (element -> obj LBRACKET parameter_list RBRACKET .)
    JDLINE          reduce using rule 8 (element -> obj LBRACKET parameter_list RBRACKET .)
    JDRECTANGLE     reduce using rule 8 (element -> obj LBRACKET parameter_list RBRACKET .)
    JDROUNDRECTANGLE reduce using rule 8 (element -> obj LBRACKET parameter_list RBRACKET .)
    JDGROUP         reduce using rule 8 (element -> obj LBRACKET parameter_list RBRACKET .)
    JDELLIPSE       reduce using rule 8 (element -> obj LBRACKET parameter_list RBRACKET .)
    JDBAR           reduce using rule 8 (element -> obj LBRACKET parameter_list RBRACKET .)
    JDSWINGOBJECT   reduce using rule 8 (element -> obj LBRACKET parameter_list RBRACKET .)
    JDLABEL         reduce using rule 8 (element -> obj LBRACKET parameter_list RBRACKET .)
    JDPOLYLINE      reduce using rule 8 (element -> obj LBRACKET parameter_list RBRACKET .)
    JDIMAGE         reduce using rule 8 (element -> obj LBRACKET parameter_list RBRACKET .)
    JDAXIS          reduce using rule 8 (element -> obj LBRACKET parameter_list RBRACKET .)
    JDSLIDER        reduce using rule 8 (element -> obj LBRACKET parameter_list RBRACKET .)


state 47

    (28) value_list -> value_list COMMA . value
    (30) value -> . NUMBER
    (31) value -> . TEXT
    (32) value -> . true
    (33) value -> . false

    NUMBER          shift and go to state 41
    TEXT            shift and go to state 40
    true            shift and go to state 44
    false           shift and go to state 38

    value                          shift and go to state 51

state 48

    (26) parameter -> SYMBOL TWOP LBRACKET element_list . RBRACKET
    (5) element_list -> element_list . element
    (7) element -> . obj LBRACKET RBRACKET
    (8) element -> . obj LBRACKET parameter_list RBRACKET
    (9) obj -> . JDLINE
    (10) obj -> . JDRECTANGLE
    (11) obj -> . JDROUNDRECTANGLE
    (12) obj -> . JDGROUP
    (13) obj -> . JDELLIPSE
    (14) obj -> . JDBAR
    (15) obj -> . JDSWINGOBJECT
    (16) obj -> . JDLABEL
    (17) obj -> . JDPOLYLINE
    (18) obj -> . JDIMAGE
    (19) obj -> . JDAXIS
    (20) obj -> . JDSLIDER

    RBRACKET        shift and go to state 52
    JDLINE          shift and go to state 25
    JDRECTANGLE     shift and go to state 13
    JDROUNDRECTANGLE shift and go to state 20
    JDGROUP         shift and go to state 16
    JDELLIPSE       shift and go to state 17
    JDBAR           shift and go to state 23
    JDSWINGOBJECT   shift and go to state 15
    JDLABEL         shift and go to state 11
    JDPOLYLINE      shift and go to state 19
    JDIMAGE         shift and go to state 21
    JDAXIS          shift and go to state 22
    JDSLIDER        shift and go to state 24

    element                        shift and go to state 31
    obj                            shift and go to state 12

state 49

    (25) parameter -> SYMBOL TWOP LBRACKET parameter_list . RBRACKET
    (21) parameter_list -> parameter_list . parameter
    (23) parameter -> . SYMBOL TWOP param_value
    (24) parameter -> . SYMBOL TWOP LBRACKET RBRACKET
    (25) parameter -> . SYMBOL TWOP LBRACKET parameter_list RBRACKET
    (26) parameter -> . SYMBOL TWOP LBRACKET element_list RBRACKET

    RBRACKET        shift and go to state 53
    SYMBOL          shift and go to state 27

    parameter                      shift and go to state 34

state 50

    (24) parameter -> SYMBOL TWOP LBRACKET RBRACKET .

    RBRACKET        reduce using rule 24 (parameter -> SYMBOL TWOP LBRACKET RBRACKET .)
    SYMBOL          reduce using rule 24 (parameter -> SYMBOL TWOP LBRACKET RBRACKET .)


state 51

    (28) value_list -> value_list COMMA value .

    COMMA           reduce using rule 28 (value_list -> value_list COMMA value .)
    RBRACKET        reduce using rule 28 (value_list -> value_list COMMA value .)
    SYMBOL          reduce using rule 28 (value_list -> value_list COMMA value .)


state 52

    (26) parameter -> SYMBOL TWOP LBRACKET element_list RBRACKET .

    RBRACKET        reduce using rule 26 (parameter -> SYMBOL TWOP LBRACKET element_list RBRACKET .)
    SYMBOL          reduce using rule 26 (parameter -> SYMBOL TWOP LBRACKET element_list RBRACKET .)


state 53

    (25) parameter -> SYMBOL TWOP LBRACKET parameter_list RBRACKET .

    RBRACKET        reduce using rule 25 (parameter -> SYMBOL TWOP LBRACKET parameter_list RBRACKET .)
    SYMBOL          reduce using rule 25 (parameter -> SYMBOL TWOP LBRACKET parameter_list RBRACKET .)

